--- a/dpm-gateway.yaml
+++ b/dpm-gateway.yaml
@@ -23,5 +23,11 @@ spec:
         env:
         - name: server.port
           value: "9090"
+        - name: spring.cloud.kubernetes.discovery.enabled
+            value: "true"
+        - name: spring.cloud.kubernetes.reload.enabled
+            value: "true"
+        - name: spring.cloud.kubernetes.discovery.locator.enabled
+            value: "true"
         ports:
         - containerPort: 8082
