--- a/svc-gatewayservice.yaml
+++ b/svc-gatewayservice.yaml
@@ -4,11 +4,11 @@ metadata:
   name: gateway
   namespace: dpm
 spec:
+  type: NodePort
+  selector:
+    app: gateway
   ports:
   - protocol: TCP
       port: 8082
       targetPort: 9090
-  selector:
-    app: gateway
-  type: NodePort
-  - NodePort: 31235
+      nodePort: 31235
